[package]
name = "atproto-feedgen"
version = "0.1.0"
edition = "2021"
description = "ATProto feedgen support library"
authors = ["Naim A. <naim@abda.nl>"]
license = "MIT"

[[example]]
name = "print_posts"

[dependencies]
atrium-api = "0.24.2"
fastwebsockets = { version = "0.8.0", features = ["upgrade"] }
futures = "0.3.30"
serde = { version = "1.0.209", features = ["derive"] }
flume = "0.11.0"
hyper = { version = "1.4.1", default-features = false, features = ["client"] }
reqwest = { version = "0.12.7", default-features = false, features = [
    "rustls-tls-webpki-roots",
    "rustls-tls",
] }
tracing = "0.1.40"
ciborium = "0.2.2"
serde_cbor = "0.11.2"
serde_ipld_dagcbor = "0.6.1"
rs-car = "0.4.1"
tokio = { version = "1.42.0", default-features = false, features = ["time"] }
bitflags = "2.6.0"
cid = "0.11.1"
serde_json = "1.0.133"
bytes = "1.9.0"

[dev-dependencies]
tokio = { version = "1.42.0", features = ["full"] }
