[package]
name = "hebrewsky"
version = "0.1.0"
edition = "2021"
default-run = "hebrewsky"

[[bin]]
name = "publish-feed"

[dependencies]
atproto-feedgen = { path = "../atproto-feedgen" }
sqlx = { version = "0.8.2", features = ["runtime-tokio", "sqlite"] }
hyper = { version = "1.4.1", features = ["full"] }
axum = { version = "0.7.5", features = ["http2", "tracing", "ws"] }
tokio = { version = "1.40.0", features = ["full"] }
tracing = "0.1.40"
serde = { version = "1.0.209", features = ["derive"] }
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
atrium-api = "0.24.2"
console-subscriber = "0.4.0"
dotenvy = "0.15.7"
tower-http = { version = "0.5.2", features = [
    "compression-br",
    "compression-deflate",
    "compression-gzip",
    "compression-zstd",
    "trace",
] }
ipld-core = "0.4.1"
bsky-sdk = "0.1.8"
axum-extra = { version = "0.9.3", features = ["typed-header"] }
serde_json = "1.0.128"
atrium-crypto = "0.1.0"
base64 = "0.22.1"
whatlang = "0.16.4"
