[package]
name = "hebrewsky"
version = "0.1.0"
edition = "2021"
default-run = "hebrewsky"

[[bin]]
name = "publish-feed"
required-features = ["binary_deps"]

[dependencies]
atproto-feedgen = { path = "../atproto-feedgen" }
sqlx = { version = "0.8.2", features = ["runtime-tokio", "sqlite"] }
hyper = { version = "1.4.1", features = ["full"] }
axum = { version = "0.7.5", features = ["http2", "tracing"] }
tokio = { version = "1.42.0", features = ["full"] }
tracing = "0.1.40"
serde = { version = "1.0.209", features = ["derive"] }
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
atrium-api = "0.24.2"
atrium-crypto = { git = "https://github.com/sugyan/atrium", package = "atrium-crypto" }
dotenvy = "0.15.7"
tower-http = { version = "0.5.2", features = [
    "compression-br",
    "compression-deflate",
    "compression-gzip",
    "compression-zstd",
    "trace",
] }
ipld-core = { version = "0.4.1", optional = true }
bsky-sdk = { version = "0.1.8", optional = true }
serde_json = "1.0.128"
base64 = "0.22.1"
whatlang = "0.16.4"
reqwest = { version = "0.12.7", default-features = false, features = [
    "json",
    "rustls-tls-webpki-roots",
    "rustls-tls",
] }

[features]
default = []
binary_deps = ["ipld-core", "bsky-sdk"]
